# CV-Webapplication

./: docker-compose.yml
ML/: dockerfile  main.py  pyproject.toml  result.py  tempCodeRunnerFile.py  test.py
ML/datasetcrosswalk/test/labels/: 1-116-_jpg.rf.8ac944e31f45b6fdf9c44e5dd6c97b44.txt  1-16-_jpg.rf.ad1d020dff2d95c042991fa8b0b1e2ab.txt  1-53-_jpg.rf.961c7dfea21090ab7c39bf249cc962e7.txt  1-64-_jpg.rf.d7a11079f672493ab12c18a2dddccfaf.txt  100_jpg.rf.ef8399c18b57345f4b27f41bc9765e99.txt  167_jpg.rf.725e3869e6fb8abcf85cba34fd969465.txt  1_jpg.rf.6259ed0acf78247e3e0ef28e353d6e3f.txt  24_jpg.rf.a3602a6d905d5a3dd2acd31f75921714.txt  4e626da2e76242afbb1608af21be9490_jpg.rf.b6564d62f3173f320c8f9a2ce41e882d.txt  70_jpg.rf.2faa31c172f7af0cd9b655cbb4a239d6.txt  70_jpg.rf.76853c030decbe62e48be2d23b2d8e2d.txt  73_jpg.rf.60d8d91dfab036dfecf521bdca07dcc7.txt  79_jpg.rf.266e08be65d1b6083d73616c6d4a1dc5.txt  Cross-1087-_png_jpg.rf.875afc121efa7ce3b3ae93fe03eefe2a.txt  Cross-1105-_png_jpg.rf.0ae34d04f6ad7e94fc3f560b718be740.txt  Strisce-180-_jpg.rf.879bb2b1909297d27369524db6c4eca7.txt  Strisce-195-_jpg.rf.c660ce8822ce0489ae31c3c9f4fd3612.txt  Strisce-197-_jpg.rf.718e7c63d09b54063b59a017b83b937d.txt  Strisce-207-_jpg.rf.3eb8aab14169f6d3daf0b08181164cd0.txt  Strisce-277-_jpg.rf.d6bd407df866034e32c76c7c20a50576.txt
ML/datasetcrosswalk/train/: labels.cache
ML/datasetcrosswalk/valid/: labels.cache
Web/Back-End/: main.py  (+1 more)
Web/BackEnd/: Dockerfile  database.py  main.py  model.py  pyproject.toml
Web/BackEnd/ML/: Detector.py
Web/BackEnd/Rounter/: auth.py  detect.py
(+949 files in other folders)
